<resources>
    <string name="app_name">Budget Manager</string>
    <string name="loginPswd">Password</string>
    <string name="LoginUsername">Email address</string>
    <string name="enter_your_login_credentials">Your Login Credentials</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now!</string>
    <string name="login_screen">Login screen</string>
    <string name="registration_screen">Registration screen</string>
    <string name="already_have_an_account_login">Already have an account? Login.</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="choose_a_password">Eight character password</string>
    <string name="enter_your_email_address">Enter email address</string>
    <string name="choose_a_username">Choose a username</string>
    <string name="create_an_account">Create An Account</string>
    <string name="your_name">Your name</string>
    <string name="verify_your_email_address">Verify Your Email Address</string>
    <string name="enter_otp">Enter OTP sent to your email</string>
    <string name="verify">Verify</string>
    <string name="track_budget_at_the_tip_of_your_fingertips">Track budget at the tip of your fingertips.</string>
    <string name="current_balance">Current Balance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_transaction">Latest Expense</string>
    <string name="set_up_your_budget">Set Up Your Budget</string>
    <string name="add_transaction">Add a Transaction</string>
    <string name="add">ADD</string>
</resources>