<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/plt4"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_gravity="center_horizontal|center_vertical"
        android:id="@+id/linReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_rawRes="@raw/signup"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:textColor="@color/plt2"
            android:text="@string/create_an_account" />
        <EditText
            android:id="@+id/enterName"
            android:drawablePadding="10dp"
            android:textColorHint="@color/plt2"
            android:textStyle="italic"
            android:textColor="@color/plt2"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/baseline_person_24"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:drawablePadding="10dp"
            android:textColorHint="@color/plt2"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@color/plt2"
            android:ems="10"
            android:drawableStart="@drawable/baseline_email_24"
            android:hint="@string/enter_your_email_address"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/editTextTextPassword3"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:textColorHint="@color/plt2"
            android:textStyle="italic"
            android:textColor="@color/plt2"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:drawableStart="@drawable/baseline_lock_24"
            android:hint="@string/choose_a_password"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/editTextTextPassword4"
            android:layout_width="match_parent"
            android:drawablePadding="10dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColorHint="@color/plt2"
            android:textStyle="italic"
            android:ems="10"
            android:textColor="@color/plt2"
            android:drawableStart="@drawable/baseline_repeat_24"
            android:hint="@string/repeat_password"
            android:inputType="textPassword" />
        <TextView
            android:gravity="center"
            android:textColor="@color/plt2"
            android:id="@+id/accExists"
            android:layout_width="match_parent"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/already_have_an_account_login" />
        <Button
            android:id="@+id/getReg"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="italic|bold"
            android:backgroundTint="@color/teal_200"
            android:textColor="@color/plt5"
            android:text="@string/register"/>
    </LinearLayout>
</ScrollView>