<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/plt4"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:padding="30sp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_rawRes="@raw/finance"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <TextView
            android:gravity="center"
            android:textColor="@color/plt2"
            android:id="@+id/message"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textStyle="bold|italic"
            android:text="@string/enter_your_login_credentials"/>
        <EditText
            android:id="@+id/emailAdd"
            android:drawableStart="@drawable/baseline_account_circle_24"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:textColor="@color/plt2"
            android:textColorHint="@color/plt2"
            android:textStyle="italic"
            android:hint="@string/LoginUsername"
            android:inputType="textPersonName"/>
        <EditText
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="10dp"
            android:id="@+id/password"
            android:textColor="@color/plt2"
            android:hint="@string/loginPswd"
            android:layout_width="match_parent"
            android:textColorHint="@color/plt2"
            android:textStyle="italic"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword"/>
        <TextView
            android:textColor="@color/plt2"
            android:gravity="center"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_gravity="center_horizontal"
            android:text="@string/don_t_have_an_account_register_now"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/button"
            android:backgroundTint="@color/teal_200"
            android:textColor="@color/plt5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="bold|italic"
            android:text="@string/login" />
    </LinearLayout>
</ScrollView>