<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height= "match_parent"
    tools:context=".homeFragment">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            app:lottie_autoPlay="true"
            android:layout_alignParentTop="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/welcome" />
        <TextView
            android:textStyle="italic|bold"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:id="@+id/welcUser"
            android:layout_below="@id/anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/plt2"
            android:textSize="20sp"
            android:layout_marginBottom="60dp"
            android:text="@string/track_budget_at_the_tip_of_your_fingertips"/>
        <androidx.cardview.widget.CardView
            android:backgroundTint="@color/plt2"
            android:id="@+id/card1"
            android:layout_below="@id/welcUser"
            app:cardCornerRadius="20dp"
            android:layout_alignLeft="@id/welcUser"
            android:layout_width="145dp"
            android:layout_height="200dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    app:layout_constraintBottom_toTopOf="@id/amount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:text="@string/current_balance" />

                <TextView
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/amount"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_200"
                    android:textStyle="bold|italic"
                    android:text="$0" />
                <TextView
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/date"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/plt4"
                    android:textStyle="italic"
                    android:padding="20dp"
                    android:textSize="10dp"
                    android:text="Last modified: 30/06/2023" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_alignBottom="@id/card1"
            android:backgroundTint="@color/plt2"
            app:cardCornerRadius="20dp"
            android:layout_alignRight="@id/welcUser"
            android:id="@+id/card2"
            android:layout_width="150dp"
            android:layout_marginLeft="55dp"
            android:layout_toRightOf="@id/card1"
            android:layout_height="200dp" >
            <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/latest"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:text="@string/latest_transaction" />
                <TextView
                    android:id="@+id/latest"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textStyle="bold|italic"
                    android:textColor="@color/teal_200"
                    android:text="NULL" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</FrameLayout>